Add support for 1.21.1 + use CyanLib 0.5.0